--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Build and test
 
 on:
   push:
@@ -7,24 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Zig
-        run: |
-          curl -L https://ziglang.org/download/0.15.2/zig-x86_64-linux-0.15.2.tar.xz | tar -xJ
-          echo "$PWD/zig-x86_64-linux-0.15.2" >> $GITHUB_PATH
-
-      - name: Build
-        run: zig build
-
-      - name: Run Zig tests
-        run: zig build test
-
-  bench:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -41,10 +24,13 @@ jobs:
       - name: Build zagi
         run: zig build -Doptimize=ReleaseFast
 
-      - name: Install bench dependencies
-        working-directory: bench
+      - name: Run zig tests
+        run: zig build test
+
+      - name: Install test dependencies
+        working-directory: test
         run: bun install
 
       - name: Run integration tests
-        working-directory: bench
+        working-directory: test
         run: bun run test
